# sqlweld

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  oranda.json
.github/workflows/: release.yml
public/: artifacts.json  changelog.rss  index.html  sqlweld-installer.ps1.txt  sqlweld-installer.sh.txt
public/artifacts/: index.html
public/changelog/: index.html
public/changelog/v0.1.3/: index.html
public/changelog/v0.1.4/: index.html
public/changelog/v0.1.5/: index.html
public/changelog/v0.2.0/: index.html
src/: lib.rs  main.rs  test.rs
test_data/: get_some_objects.sql  get_some_objects.sql.liquid  get_some_objects.sql.tera  other_template.tera  perm_check.partial.sql.liquid  perm_check.partial.sql.tera  root.partial.sql.tera  update_some_objects.sql  update_some_objects.sql.liquid  update_some_objects.sql.tera  uses_root.sql  uses_root.sql.tera
test_data/in_subdir/: uses_root.sql  uses_root.sql.tera
